[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/models/Brown.material" type="Material" id=1]
[ext_resource path="res://assets/models/Grey.material" type="Material" id=2]
[ext_resource path="res://Rifle.gd" type="Script" id=3]

[sub_resource type="ArrayMesh" id=1]
resource_name = "Rifle"
surfaces/0 = {
"aabb": AABB( -1, -3.38843, -1, 2, 4.38843, 2.89348 ),
"array_data": PoolByteArray( 0, 0, 128, 191, 0, 0, 0, 0, 78, 152, 223, 62, 129, 0, 0, 0, 0, 126, 0, 127, 0, 56, 111, 59, 0, 0, 128, 191, 0, 0, 128, 63, 78, 152, 223, 62, 129, 0, 0, 0, 0, 126, 0, 127, 0, 57, 111, 59, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 129, 0, 0, 0, 0, 126, 0, 127, 0, 57, 0, 58, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 191, 129, 0, 0, 0, 0, 126, 0, 127, 0, 56, 0, 58, 0, 0, 128, 63, 0, 0, 0, 0, 96, 125, 49, 63, 127, 0, 0, 0, 0, 127, 0, 127, 0, 56, 157, 52, 0, 0, 128, 63, 0, 0, 128, 63, 96, 125, 49, 63, 127, 0, 0, 0, 0, 126, 0, 127, 0, 57, 157, 52, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 127, 0, 0, 0, 0, 127, 0, 127, 0, 57, 0, 52, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 127, 0, 0, 0, 0, 127, 0, 127, 0, 56, 0, 52, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 21, 125, 0, 127, 0, 0, 129, 0, 57, 0, 52, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 0, 21, 125, 0, 127, 0, 0, 129, 0, 59, 0, 52, 0, 0, 128, 191, 116, 10, 185, 190, 13, 217, 157, 63, 0, 21, 125, 0, 127, 0, 0, 129, 0, 59, 0, 52, 0, 0, 128, 63, 116, 10, 185, 190, 13, 217, 157, 63, 0, 21, 125, 0, 127, 0, 0, 129, 0, 57, 0, 52, 0, 0, 128, 191, 0, 0, 128, 191, 96, 125, 49, 63, 0, 129, 0, 0, 127, 0, 0, 127, 0, 48, 157, 52, 0, 0, 128, 63, 0, 0, 128, 191, 96, 125, 49, 63, 0, 129, 0, 0, 127, 0, 0, 127, 0, 54, 157, 52, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 0, 129, 0, 0, 127, 0, 0, 127, 0, 54, 0, 52, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 0, 129, 0, 0, 127, 0, 0, 127, 0, 48, 0, 52, 0, 0, 128, 63, 0, 0, 128, 63, 96, 125, 49, 63, 0, 127, 0, 0, 129, 0, 0, 127, 0, 57, 157, 52, 0, 0, 128, 191, 0, 0, 128, 63, 96, 125, 49, 63, 0, 127, 0, 0, 130, 0, 0, 127, 0, 59, 157, 52, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 0, 127, 0, 0, 129, 0, 0, 127, 0, 59, 0, 52, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 127, 0, 0, 129, 0, 0, 127, 0, 57, 0, 52, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 0, 127, 0, 0, 129, 0, 0, 127, 0, 57, 0, 56, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 0, 127, 0, 0, 129, 0, 0, 127, 0, 59, 0, 56, 0, 0, 128, 191, 0, 0, 128, 63, 78, 152, 223, 62, 0, 127, 0, 0, 129, 0, 0, 127, 0, 59, 32, 53, 0, 0, 128, 63, 0, 0, 128, 63, 78, 152, 223, 62, 0, 127, 0, 0, 130, 0, 0, 127, 0, 57, 32, 53, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 0, 129, 0, 0, 127, 0, 0, 127, 0, 48, 0, 56, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 0, 129, 0, 0, 127, 0, 0, 127, 0, 54, 0, 56, 0, 0, 128, 63, 0, 0, 128, 191, 78, 152, 223, 62, 0, 129, 0, 0, 127, 0, 0, 127, 0, 54, 32, 53, 0, 0, 128, 191, 0, 0, 128, 191, 78, 152, 223, 62, 0, 129, 0, 0, 127, 0, 0, 127, 0, 48, 32, 53, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 191, 127, 0, 0, 0, 0, 126, 0, 127, 0, 56, 0, 56, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 127, 0, 0, 0, 0, 127, 0, 127, 0, 57, 0, 56, 0, 0, 128, 63, 0, 0, 128, 63, 78, 152, 223, 62, 127, 0, 0, 0, 0, 126, 0, 127, 0, 57, 32, 53, 0, 0, 128, 63, 0, 0, 0, 0, 78, 152, 223, 62, 127, 0, 0, 0, 0, 126, 0, 127, 0, 56, 32, 53, 0, 0, 128, 191, 0, 0, 0, 0, 96, 125, 49, 63, 129, 0, 0, 0, 0, 126, 0, 127, 0, 56, 177, 59, 0, 0, 128, 191, 0, 0, 128, 63, 96, 125, 49, 63, 129, 0, 0, 0, 0, 127, 0, 127, 0, 57, 177, 59, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 63, 129, 0, 0, 0, 0, 127, 0, 127, 0, 56, 0, 60, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 129, 0, 0, 0, 0, 127, 0, 127, 0, 57, 0, 60, 0, 0, 128, 63, 116, 10, 185, 190, 13, 217, 157, 63, 127, 0, 0, 0, 127, 0, 0, 127, 0, 57, 0, 52, 0, 0, 128, 63, 156, 66, 174, 191, 13, 217, 157, 63, 127, 0, 0, 0, 0, 117, 47, 127, 0, 56, 0, 52, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 129, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 60, 0, 0, 128, 191, 78, 33, 23, 192, 13, 217, 157, 63, 129, 0, 0, 0, 127, 0, 0, 127, 0, 54, 0, 60, 0, 0, 128, 191, 156, 66, 174, 191, 13, 217, 157, 63, 129, 0, 0, 0, 127, 0, 0, 127, 0, 56, 0, 60, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 0, 235, 131, 0, 127, 0, 0, 127, 0, 48, 0, 52, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 0, 235, 131, 0, 127, 0, 0, 127, 0, 54, 0, 52, 0, 0, 128, 63, 78, 33, 23, 192, 13, 217, 157, 63, 0, 235, 131, 0, 127, 0, 0, 127, 0, 54, 0, 52, 0, 0, 128, 191, 78, 33, 23, 192, 13, 217, 157, 63, 0, 235, 131, 0, 127, 0, 0, 127, 0, 48, 0, 52, 0, 0, 128, 191, 116, 10, 185, 190, 13, 217, 157, 63, 129, 0, 0, 0, 127, 0, 0, 127, 0, 57, 0, 60, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 127, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 52, 0, 0, 128, 63, 78, 33, 23, 192, 13, 217, 157, 63, 127, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 52, 0, 0, 128, 63, 0, 0, 128, 191, 78, 152, 223, 62, 127, 0, 0, 0, 0, 126, 0, 127, 0, 54, 32, 53, 0, 0, 128, 63, 0, 0, 128, 191, 96, 125, 49, 63, 127, 0, 0, 0, 0, 127, 0, 127, 0, 54, 157, 52, 0, 0, 128, 191, 0, 0, 128, 191, 96, 125, 49, 63, 129, 0, 0, 0, 0, 126, 0, 127, 0, 54, 177, 59, 0, 0, 128, 191, 0, 0, 128, 191, 78, 152, 223, 62, 129, 0, 0, 0, 0, 127, 0, 127, 0, 54, 111, 59, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 127, 0, 0, 0, 0, 126, 0, 127, 0, 54, 0, 56, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 129, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 58, 0, 0, 128, 191, 102, 253, 239, 191, 221, 25, 240, 63, 129, 0, 0, 0, 127, 0, 0, 127, 0, 56, 0, 60, 0, 0, 128, 191, 116, 10, 185, 190, 104, 93, 242, 63, 129, 0, 0, 0, 127, 0, 0, 127, 0, 57, 0, 60, 0, 0, 128, 63, 103, 253, 239, 191, 221, 25, 240, 63, 127, 0, 0, 0, 0, 123, 29, 127, 0, 56, 255, 51, 0, 0, 128, 63, 24, 220, 88, 192, 81, 214, 237, 63, 127, 0, 0, 0, 127, 0, 0, 127, 0, 54, 0, 52, 0, 0, 128, 63, 116, 10, 185, 190, 104, 93, 242, 63, 127, 0, 0, 0, 0, 105, 69, 127, 0, 57, 0, 52, 0, 0, 128, 63, 116, 10, 185, 190, 13, 217, 157, 63, 0, 127, 0, 0, 127, 0, 0, 127, 0, 57, 0, 52, 0, 0, 128, 191, 116, 10, 185, 190, 13, 217, 157, 63, 0, 127, 0, 0, 127, 0, 0, 127, 0, 59, 0, 52, 0, 0, 128, 191, 116, 10, 185, 190, 104, 93, 242, 63, 0, 127, 0, 0, 127, 0, 0, 127, 0, 59, 0, 52, 0, 0, 128, 63, 116, 10, 185, 190, 104, 93, 242, 63, 0, 127, 0, 0, 127, 0, 0, 127, 0, 57, 0, 52, 0, 0, 128, 191, 24, 220, 88, 192, 81, 214, 237, 63, 129, 0, 0, 0, 127, 0, 0, 127, 0, 54, 0, 60, 0, 0, 128, 191, 78, 33, 23, 192, 13, 217, 157, 63, 0, 190, 148, 0, 127, 0, 0, 127, 0, 48, 0, 52, 0, 0, 128, 63, 78, 33, 23, 192, 13, 217, 157, 63, 0, 190, 148, 0, 127, 0, 0, 127, 0, 54, 0, 52, 0, 0, 128, 63, 24, 220, 88, 192, 81, 214, 237, 63, 0, 190, 148, 0, 127, 0, 0, 127, 0, 54, 0, 52, 0, 0, 128, 191, 24, 220, 88, 192, 81, 214, 237, 63, 0, 190, 148, 0, 127, 0, 0, 127, 0, 48, 0, 52 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0, 4, 0, 6, 0, 5, 0, 4, 0, 7, 0, 6, 0, 8, 0, 10, 0, 9, 0, 8, 0, 11, 0, 10, 0, 12, 0, 14, 0, 13, 0, 12, 0, 15, 0, 14, 0, 16, 0, 18, 0, 17, 0, 16, 0, 19, 0, 18, 0, 20, 0, 22, 0, 21, 0, 20, 0, 23, 0, 22, 0, 24, 0, 26, 0, 25, 0, 24, 0, 27, 0, 26, 0, 28, 0, 30, 0, 29, 0, 28, 0, 31, 0, 30, 0, 32, 0, 1, 0, 33, 0, 32, 0, 0, 0, 1, 0, 34, 0, 33, 0, 35, 0, 34, 0, 32, 0, 33, 0, 23, 0, 17, 0, 22, 0, 23, 0, 16, 0, 17, 0, 31, 0, 5, 0, 30, 0, 31, 0, 4, 0, 5, 0, 7, 0, 36, 0, 6, 0, 7, 0, 37, 0, 36, 0, 34, 0, 39, 0, 38, 0, 34, 0, 40, 0, 39, 0, 41, 0, 43, 0, 42, 0, 41, 0, 44, 0, 43, 0, 35, 0, 40, 0, 34, 0, 35, 0, 45, 0, 40, 0, 46, 0, 37, 0, 7, 0, 46, 0, 47, 0, 37, 0, 48, 0, 4, 0, 31, 0, 48, 0, 49, 0, 4, 0, 38, 0, 32, 0, 34, 0, 38, 0, 50, 0, 32, 0, 50, 0, 0, 0, 32, 0, 50, 0, 51, 0, 0, 0, 52, 0, 31, 0, 28, 0, 52, 0, 48, 0, 31, 0, 49, 0, 7, 0, 4, 0, 49, 0, 46, 0, 7, 0, 51, 0, 3, 0, 0, 0, 51, 0, 53, 0, 3, 0, 45, 0, 54, 0, 40, 0, 45, 0, 55, 0, 54, 0, 47, 0, 56, 0, 37, 0, 47, 0, 57, 0, 56, 0, 37, 0, 58, 0, 36, 0, 37, 0, 56, 0, 58, 0, 59, 0, 61, 0, 60, 0, 59, 0, 62, 0, 61, 0, 40, 0, 63, 0, 39, 0, 40, 0, 54, 0, 63, 0, 64, 0, 66, 0, 65, 0, 64, 0, 67, 0, 66, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 174,
"material": ExtResource( 1 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 68
}
surfaces/1 = {
"aabb": AABB( -1, -3.45932, -2.69533, 2, 4.45933, 4.63438 ),
"array_data": PoolByteArray( 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 0, 31, 134, 0, 127, 0, 0, 127, 0, 59, 0, 56, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 0, 31, 134, 0, 127, 0, 0, 127, 0, 57, 0, 56, 106, 151, 4, 63, 132, 213, 15, 63, 69, 133, 142, 191, 0, 31, 134, 0, 127, 0, 0, 127, 0, 57, 0, 56, 106, 151, 4, 191, 132, 213, 15, 63, 69, 133, 142, 191, 0, 31, 134, 0, 127, 0, 0, 127, 0, 59, 0, 56, 0, 0, 128, 191, 0, 0, 128, 191, 96, 125, 49, 63, 129, 0, 0, 0, 127, 0, 0, 127, 0, 54, 177, 59, 0, 0, 128, 191, 0, 0, 128, 191, 78, 152, 223, 62, 129, 0, 0, 0, 127, 0, 0, 127, 0, 54, 111, 59, 0, 0, 128, 191, 145, 60, 51, 192, 78, 152, 223, 62, 129, 0, 0, 0, 127, 0, 0, 127, 0, 54, 111, 59, 0, 0, 128, 191, 145, 60, 51, 192, 96, 125, 49, 63, 129, 0, 0, 0, 127, 0, 0, 127, 0, 54, 177, 59, 0, 0, 128, 191, 145, 60, 51, 192, 78, 152, 223, 62, 0, 129, 0, 0, 127, 0, 0, 127, 0, 48, 32, 53, 0, 0, 128, 63, 145, 60, 51, 192, 78, 152, 223, 62, 0, 129, 0, 0, 127, 0, 0, 127, 0, 54, 32, 53, 0, 0, 128, 63, 145, 60, 51, 192, 96, 125, 49, 63, 0, 129, 0, 0, 127, 0, 0, 127, 0, 54, 157, 52, 0, 0, 128, 191, 145, 60, 51, 192, 96, 125, 49, 63, 0, 129, 0, 0, 127, 0, 0, 127, 0, 48, 157, 52, 0, 0, 128, 63, 0, 0, 128, 191, 78, 152, 223, 62, 127, 0, 0, 0, 127, 0, 0, 127, 0, 54, 32, 53, 0, 0, 128, 63, 0, 0, 128, 191, 96, 125, 49, 63, 127, 0, 0, 0, 127, 0, 0, 127, 0, 54, 157, 52, 0, 0, 128, 63, 145, 60, 51, 192, 96, 125, 49, 63, 127, 0, 0, 0, 127, 0, 0, 127, 0, 54, 157, 52, 0, 0, 128, 63, 145, 60, 51, 192, 78, 152, 223, 62, 127, 0, 0, 0, 127, 0, 0, 127, 0, 54, 32, 53, 0, 0, 128, 191, 0, 0, 128, 191, 78, 152, 223, 62, 0, 0, 129, 0, 127, 0, 0, 127, 0, 48, 32, 53, 0, 0, 128, 63, 0, 0, 128, 191, 78, 152, 223, 62, 0, 0, 129, 0, 127, 0, 0, 127, 0, 54, 32, 53, 0, 0, 128, 63, 145, 60, 51, 192, 78, 152, 223, 62, 0, 0, 129, 0, 127, 0, 0, 127, 0, 54, 32, 53, 0, 0, 128, 191, 145, 60, 51, 192, 78, 152, 223, 62, 0, 0, 129, 0, 127, 0, 0, 127, 0, 48, 32, 53, 0, 0, 128, 63, 0, 0, 128, 191, 96, 125, 49, 63, 0, 0, 127, 0, 127, 0, 0, 129, 0, 54, 157, 52, 0, 0, 128, 191, 0, 0, 128, 191, 96, 125, 49, 63, 0, 0, 127, 0, 127, 0, 0, 129, 0, 48, 157, 52, 0, 0, 128, 191, 145, 60, 51, 192, 96, 125, 49, 63, 0, 0, 127, 0, 127, 0, 0, 129, 0, 48, 157, 52, 0, 0, 128, 63, 145, 60, 51, 192, 96, 125, 49, 63, 0, 0, 127, 0, 127, 0, 0, 129, 0, 54, 157, 52, 0, 0, 128, 191, 24, 220, 88, 192, 81, 214, 237, 63, 0, 190, 148, 0, 127, 0, 0, 127, 0, 48, 0, 52, 0, 0, 128, 63, 24, 220, 88, 192, 81, 214, 237, 63, 0, 190, 148, 0, 127, 0, 0, 127, 0, 54, 0, 52, 0, 0, 128, 63, 116, 101, 93, 192, 160, 91, 243, 63, 0, 190, 148, 0, 127, 0, 0, 127, 0, 54, 0, 52, 0, 0, 128, 191, 116, 101, 93, 192, 160, 91, 243, 63, 0, 190, 148, 0, 127, 0, 0, 127, 0, 48, 0, 52, 0, 0, 128, 63, 195, 134, 244, 191, 44, 199, 245, 63, 0, 255, 126, 0, 0, 126, 1, 127, 0, 56, 0, 52, 0, 0, 128, 63, 116, 10, 185, 190, 183, 50, 248, 63, 0, 255, 126, 0, 0, 126, 1, 127, 0, 57, 0, 52, 0, 0, 128, 191, 116, 10, 185, 190, 183, 50, 248, 63, 0, 255, 126, 0, 0, 126, 1, 127, 0, 57, 0, 0, 0, 0, 128, 191, 194, 134, 244, 191, 44, 199, 245, 63, 0, 255, 126, 0, 0, 126, 1, 127, 0, 56, 0, 0, 0, 0, 128, 191, 102, 253, 239, 191, 221, 25, 240, 63, 129, 0, 0, 0, 127, 0, 0, 127, 0, 56, 0, 60, 0, 0, 128, 191, 24, 220, 88, 192, 81, 214, 237, 63, 129, 0, 0, 0, 127, 0, 0, 127, 0, 54, 0, 60, 0, 0, 128, 191, 116, 101, 93, 192, 160, 91, 243, 63, 129, 0, 0, 0, 127, 0, 0, 127, 0, 54, 0, 60, 0, 0, 128, 191, 194, 134, 244, 191, 44, 199, 245, 63, 129, 0, 0, 0, 127, 0, 0, 127, 0, 56, 0, 60, 0, 0, 128, 63, 116, 10, 185, 190, 104, 93, 242, 63, 0, 127, 0, 0, 127, 0, 0, 127, 0, 57, 0, 52, 0, 0, 128, 191, 116, 10, 185, 190, 104, 93, 242, 63, 0, 127, 0, 0, 127, 0, 0, 127, 0, 59, 0, 52, 0, 0, 128, 191, 116, 10, 185, 190, 183, 50, 248, 63, 0, 127, 0, 0, 127, 0, 0, 127, 0, 59, 0, 52, 0, 0, 128, 63, 116, 10, 185, 190, 183, 50, 248, 63, 0, 127, 0, 0, 127, 0, 0, 127, 0, 57, 0, 52, 0, 0, 128, 63, 103, 253, 239, 191, 221, 25, 240, 63, 127, 0, 0, 0, 0, 126, 1, 129, 0, 56, 255, 51, 0, 0, 128, 63, 116, 10, 185, 190, 104, 93, 242, 63, 127, 0, 0, 0, 127, 0, 0, 127, 0, 57, 0, 52, 0, 0, 128, 63, 116, 10, 185, 190, 183, 50, 248, 63, 127, 0, 0, 0, 0, 126, 1, 129, 0, 57, 0, 52, 0, 0, 128, 63, 195, 134, 244, 191, 44, 199, 245, 63, 127, 0, 0, 0, 0, 126, 1, 129, 0, 56, 0, 52, 106, 151, 4, 63, 144, 225, 51, 61, 69, 133, 142, 191, 126, 0, 0, 0, 127, 0, 0, 127, 0, 56, 0, 56, 106, 151, 4, 63, 164, 178, 242, 190, 69, 133, 142, 191, 126, 0, 0, 0, 127, 0, 0, 127, 0, 54, 0, 56, 106, 151, 4, 63, 164, 178, 242, 190, 18, 21, 186, 191, 126, 0, 0, 0, 127, 0, 0, 127, 0, 54, 0, 56, 106, 151, 4, 63, 144, 225, 51, 61, 18, 21, 186, 191, 126, 0, 0, 0, 127, 0, 0, 127, 0, 56, 0, 56, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 191, 227, 0, 133, 0, 127, 0, 0, 127, 0, 56, 0, 58, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 227, 0, 133, 0, 127, 0, 0, 127, 0, 57, 0, 58, 106, 151, 4, 191, 132, 213, 15, 63, 69, 133, 142, 191, 227, 0, 133, 0, 127, 0, 0, 127, 0, 57, 0, 58, 106, 151, 4, 191, 144, 225, 51, 61, 69, 133, 142, 191, 227, 0, 133, 0, 127, 0, 0, 127, 0, 56, 0, 58, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 191, 29, 0, 133, 0, 127, 0, 0, 127, 0, 56, 0, 56, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 29, 0, 133, 0, 127, 0, 0, 127, 0, 54, 0, 56, 106, 151, 4, 63, 164, 178, 242, 190, 69, 133, 142, 191, 29, 0, 133, 0, 127, 0, 0, 127, 0, 54, 0, 56, 106, 151, 4, 63, 144, 225, 51, 61, 69, 133, 142, 191, 29, 0, 133, 0, 127, 0, 0, 127, 0, 56, 0, 56, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 0, 230, 132, 0, 127, 0, 0, 127, 0, 54, 0, 56, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 0, 230, 132, 0, 127, 0, 0, 127, 0, 48, 0, 56, 106, 151, 4, 191, 164, 178, 242, 190, 69, 133, 142, 191, 0, 230, 132, 0, 127, 0, 0, 127, 0, 48, 0, 56, 106, 151, 4, 63, 164, 178, 242, 190, 69, 133, 142, 191, 0, 230, 132, 0, 127, 0, 0, 127, 0, 54, 0, 56, 106, 151, 4, 191, 132, 213, 15, 63, 18, 21, 186, 191, 0, 126, 5, 0, 127, 0, 0, 129, 0, 59, 0, 56, 106, 151, 4, 63, 132, 213, 15, 63, 18, 21, 186, 191, 0, 126, 5, 0, 127, 0, 0, 129, 0, 57, 0, 56, 223, 234, 30, 63, 62, 255, 28, 63, 62, 128, 44, 192, 0, 126, 5, 0, 127, 0, 0, 129, 0, 57, 0, 56, 223, 234, 30, 191, 62, 255, 28, 63, 62, 128, 44, 192, 0, 126, 5, 0, 127, 0, 0, 129, 0, 59, 0, 56, 106, 151, 4, 63, 164, 178, 242, 190, 69, 133, 142, 191, 0, 129, 0, 0, 127, 0, 0, 127, 0, 54, 0, 56, 106, 151, 4, 191, 164, 178, 242, 190, 69, 133, 142, 191, 0, 129, 0, 0, 127, 0, 0, 127, 0, 48, 0, 56, 106, 151, 4, 191, 164, 178, 242, 190, 18, 21, 186, 191, 0, 129, 0, 0, 127, 0, 0, 127, 0, 48, 0, 56, 106, 151, 4, 63, 164, 178, 242, 190, 18, 21, 186, 191, 0, 129, 0, 0, 127, 0, 0, 127, 0, 54, 0, 56, 106, 151, 4, 191, 132, 213, 15, 63, 69, 133, 142, 191, 0, 127, 0, 0, 127, 0, 0, 127, 0, 59, 0, 56, 106, 151, 4, 63, 132, 213, 15, 63, 69, 133, 142, 191, 0, 127, 0, 0, 127, 0, 0, 127, 0, 57, 0, 56, 106, 151, 4, 63, 132, 213, 15, 63, 18, 21, 186, 191, 0, 127, 0, 0, 127, 0, 0, 127, 0, 57, 0, 56, 106, 151, 4, 191, 132, 213, 15, 63, 18, 21, 186, 191, 0, 127, 0, 0, 127, 0, 0, 127, 0, 59, 0, 56, 106, 151, 4, 191, 144, 225, 51, 61, 69, 133, 142, 191, 130, 0, 0, 0, 127, 0, 0, 127, 0, 56, 0, 58, 106, 151, 4, 191, 132, 213, 15, 63, 69, 133, 142, 191, 130, 0, 0, 0, 127, 0, 0, 127, 0, 57, 0, 58, 106, 151, 4, 191, 132, 213, 15, 63, 18, 21, 186, 191, 130, 0, 0, 0, 127, 0, 0, 127, 0, 57, 0, 58, 106, 151, 4, 191, 144, 225, 51, 61, 18, 21, 186, 191, 130, 0, 0, 0, 127, 0, 0, 127, 0, 56, 0, 58, 106, 151, 4, 191, 164, 178, 242, 190, 69, 133, 142, 191, 130, 0, 0, 0, 127, 0, 0, 127, 0, 54, 0, 58, 106, 151, 4, 191, 164, 178, 242, 190, 18, 21, 186, 191, 130, 0, 0, 0, 127, 0, 0, 127, 0, 54, 0, 58, 106, 151, 4, 191, 164, 178, 242, 190, 18, 21, 186, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 54, 0, 58, 106, 151, 4, 191, 144, 225, 51, 61, 18, 21, 186, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 56, 0, 58, 106, 151, 4, 63, 144, 225, 51, 61, 18, 21, 186, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 56, 0, 56, 106, 151, 4, 63, 164, 178, 242, 190, 18, 21, 186, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 54, 0, 56, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 29, 0, 133, 0, 127, 0, 0, 127, 0, 57, 0, 56, 106, 151, 4, 63, 132, 213, 15, 63, 69, 133, 142, 191, 29, 0, 133, 0, 127, 0, 0, 127, 0, 57, 0, 56, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 227, 0, 133, 0, 127, 0, 0, 127, 0, 54, 0, 58, 106, 151, 4, 191, 164, 178, 242, 190, 69, 133, 142, 191, 227, 0, 133, 0, 127, 0, 0, 127, 0, 54, 0, 58, 106, 151, 4, 63, 132, 213, 15, 63, 69, 133, 142, 191, 126, 0, 0, 0, 127, 0, 0, 127, 0, 57, 0, 56, 106, 151, 4, 63, 132, 213, 15, 63, 18, 21, 186, 191, 126, 0, 0, 0, 127, 0, 0, 127, 0, 57, 0, 56, 0, 0, 128, 63, 24, 220, 88, 192, 81, 214, 237, 63, 126, 0, 0, 0, 0, 126, 5, 129, 0, 54, 0, 52, 0, 0, 128, 63, 103, 253, 239, 191, 221, 25, 240, 63, 126, 0, 0, 0, 0, 126, 5, 129, 0, 56, 255, 51, 0, 0, 128, 63, 195, 134, 244, 191, 44, 199, 245, 63, 126, 0, 0, 0, 0, 126, 5, 129, 0, 56, 0, 52, 0, 0, 128, 63, 116, 101, 93, 192, 160, 91, 243, 63, 126, 0, 0, 0, 127, 0, 0, 127, 0, 54, 0, 52, 0, 0, 128, 191, 116, 10, 185, 190, 104, 93, 242, 63, 129, 0, 0, 0, 127, 0, 0, 127, 0, 57, 0, 60, 0, 0, 128, 191, 116, 10, 185, 190, 183, 50, 248, 63, 129, 0, 0, 0, 127, 0, 0, 127, 0, 57, 0, 60, 0, 0, 128, 63, 116, 101, 93, 192, 160, 91, 243, 63, 0, 255, 126, 0, 0, 126, 1, 127, 0, 54, 0, 52, 0, 0, 128, 63, 195, 134, 244, 191, 44, 199, 245, 63, 0, 255, 126, 0, 0, 126, 1, 127, 0, 56, 0, 52, 0, 0, 128, 191, 194, 134, 244, 191, 44, 199, 245, 63, 0, 255, 126, 0, 0, 126, 1, 127, 0, 56, 0, 0, 0, 0, 128, 191, 116, 101, 93, 192, 160, 91, 243, 63, 0, 255, 126, 0, 0, 126, 1, 127, 0, 54, 0, 0, 223, 234, 30, 191, 64, 208, 245, 187, 62, 128, 44, 192, 0, 0, 129, 0, 0, 127, 0, 127, 0, 56, 0, 58, 223, 234, 30, 191, 62, 255, 28, 63, 62, 128, 44, 192, 0, 0, 129, 0, 0, 127, 0, 127, 0, 57, 0, 58, 223, 234, 30, 63, 62, 255, 28, 63, 62, 128, 44, 192, 0, 0, 129, 0, 0, 127, 0, 127, 0, 57, 0, 56, 223, 234, 30, 63, 64, 208, 245, 187, 62, 128, 44, 192, 0, 0, 129, 0, 0, 127, 0, 127, 0, 56, 0, 56, 106, 151, 4, 191, 144, 225, 51, 61, 18, 21, 186, 191, 130, 0, 10, 0, 127, 0, 0, 129, 0, 56, 0, 58, 106, 151, 4, 191, 132, 213, 15, 63, 18, 21, 186, 191, 130, 0, 10, 0, 127, 0, 0, 129, 0, 57, 0, 58, 223, 234, 30, 191, 62, 255, 28, 63, 62, 128, 44, 192, 130, 0, 10, 0, 127, 0, 0, 129, 0, 57, 0, 58, 223, 234, 30, 191, 64, 208, 245, 187, 62, 128, 44, 192, 130, 0, 10, 0, 127, 0, 0, 129, 0, 56, 0, 58, 106, 151, 4, 63, 144, 225, 51, 61, 18, 21, 186, 191, 0, 130, 5, 0, 127, 0, 0, 129, 0, 56, 0, 56, 106, 151, 4, 191, 144, 225, 51, 61, 18, 21, 186, 191, 0, 130, 5, 0, 127, 0, 0, 129, 0, 56, 0, 58, 223, 234, 30, 191, 64, 208, 245, 187, 62, 128, 44, 192, 0, 130, 5, 0, 127, 0, 0, 129, 0, 56, 0, 58, 223, 234, 30, 63, 64, 208, 245, 187, 62, 128, 44, 192, 0, 130, 5, 0, 127, 0, 0, 129, 0, 56, 0, 56, 106, 151, 4, 63, 132, 213, 15, 63, 18, 21, 186, 191, 126, 0, 10, 0, 127, 0, 0, 129, 0, 57, 0, 56, 106, 151, 4, 63, 144, 225, 51, 61, 18, 21, 186, 191, 126, 0, 10, 0, 127, 0, 0, 129, 0, 56, 0, 56, 223, 234, 30, 63, 64, 208, 245, 187, 62, 128, 44, 192, 126, 0, 10, 0, 127, 0, 0, 129, 0, 56, 0, 56, 223, 234, 30, 63, 62, 255, 28, 63, 62, 128, 44, 192, 126, 0, 10, 0, 127, 0, 0, 129, 0, 57, 0, 56 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0, 4, 0, 6, 0, 5, 0, 4, 0, 7, 0, 6, 0, 8, 0, 10, 0, 9, 0, 8, 0, 11, 0, 10, 0, 12, 0, 14, 0, 13, 0, 12, 0, 15, 0, 14, 0, 16, 0, 18, 0, 17, 0, 16, 0, 19, 0, 18, 0, 20, 0, 22, 0, 21, 0, 20, 0, 23, 0, 22, 0, 24, 0, 26, 0, 25, 0, 24, 0, 27, 0, 26, 0, 28, 0, 30, 0, 29, 0, 28, 0, 31, 0, 30, 0, 32, 0, 34, 0, 33, 0, 32, 0, 35, 0, 34, 0, 36, 0, 38, 0, 37, 0, 36, 0, 39, 0, 38, 0, 40, 0, 42, 0, 41, 0, 40, 0, 43, 0, 42, 0, 44, 0, 46, 0, 45, 0, 44, 0, 47, 0, 46, 0, 48, 0, 50, 0, 49, 0, 48, 0, 51, 0, 50, 0, 52, 0, 54, 0, 53, 0, 52, 0, 55, 0, 54, 0, 56, 0, 58, 0, 57, 0, 56, 0, 59, 0, 58, 0, 60, 0, 62, 0, 61, 0, 60, 0, 63, 0, 62, 0, 64, 0, 66, 0, 65, 0, 64, 0, 67, 0, 66, 0, 68, 0, 70, 0, 69, 0, 68, 0, 71, 0, 70, 0, 72, 0, 74, 0, 73, 0, 72, 0, 75, 0, 74, 0, 76, 0, 75, 0, 72, 0, 76, 0, 77, 0, 75, 0, 78, 0, 80, 0, 79, 0, 78, 0, 81, 0, 80, 0, 82, 0, 55, 0, 52, 0, 82, 0, 83, 0, 55, 0, 84, 0, 51, 0, 48, 0, 84, 0, 85, 0, 51, 0, 86, 0, 47, 0, 44, 0, 86, 0, 87, 0, 47, 0, 88, 0, 90, 0, 89, 0, 88, 0, 91, 0, 90, 0, 92, 0, 35, 0, 32, 0, 92, 0, 93, 0, 35, 0, 94, 0, 96, 0, 95, 0, 94, 0, 97, 0, 96, 0, 98, 0, 100, 0, 99, 0, 98, 0, 101, 0, 100, 0, 102, 0, 104, 0, 103, 0, 102, 0, 105, 0, 104, 0, 106, 0, 108, 0, 107, 0, 106, 0, 109, 0, 108, 0, 110, 0, 112, 0, 111, 0, 110, 0, 113, 0, 112, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 186,
"material": ExtResource( 2 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 114
}

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 0.5, 0.5, 0.5 )
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 1, 0, 1 )
emission_enabled = true
emission = Color( 1, 1, 0, 1 )
emission_energy = 10.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CubeMesh" id=2]
material = SubResource( 4 )
size = Vector3( 0.1, 0.1, 0.1 )

[node name="Rifle" type="Spatial"]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0 )
script = ExtResource( 3 )

[node name="Mesh" type="MeshInstance" parent="."]
transform = Transform( 0.0756118, 0, 0, 0, 0.121598, 0, 0, 0, 0.847326, 0, 0.256326, 0.363129 )
mesh = SubResource( 1 )
material/0 = null
material/1 = null

[node name="GunFire" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.282396, -1.9742 )
emitting = false
amount = 200
lifetime = 0.1
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
visibility_aabb = AABB( -0.5, -0.5, -0.5, 1, 1, 1 )
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 2 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.28888, -1.90818 )
cast_to = Vector3( 0, 0, -50 )
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="FireLine" type="Spatial" parent="RayCast"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.28888, 1.90818 )

[node name="CSGCylinder" type="CSGCylinder" parent="RayCast/FireLine"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.286501, -3.06665 )
radius = 0.05

[node name="CSGCylinder2" type="CSGCylinder" parent="RayCast/FireLine"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.286501, -5.73331 )
radius = 0.05

[node name="CSGCylinder3" type="CSGCylinder" parent="RayCast/FireLine"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.286501, -8.39998 )
radius = 0.05

[node name="CSGCylinder4" type="CSGCylinder" parent="RayCast/FireLine"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.286501, -11.0666 )
radius = 0.05

[node name="CSGCylinder5" type="CSGCylinder" parent="RayCast/FireLine"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.286501, -13.7333 )
radius = 0.05

[node name="WobbleTween" type="Tween" parent="RayCast"]

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="tween_completed" from="RayCast/WobbleTween" to="." method="_on_WobbleTween_tween_completed"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
